Closed Bug 1626206 Opened 6 years ago Closed 6 years ago

nsTArrayBackInserter defines bad operator++

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: sg, Assigned: sg)

Details

Attachments

(1 file)

No description provided.
Pushed by sgiesecke@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/46eb82332500 Fix definition of nsTArrayBackInserter operator++. r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: